Fix block spacing

--- a/addon/components/canvas-block/styles.css
+++ b/addon/components/canvas-block/styles.css
@@ -11,7 +11,6 @@
 
 .canvas-block {
   composes: block-spacing;
-  background: rgba(255, 0, 0, 0.05);
   position: relative;
 }
 
